[hw-1] fix: Fix formatting